--- a/Hotel/Impressum/impressum.html
+++ b/Hotel/Impressum/impressum.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
-    <title>Impressung</title>
+  <title>Impressung</title>
+  <link rel="stylesheet" href="Impressum.css">
 </head>
+
 <body>
     <h2>Impressum</h2>
     <p><h4>Herausgeber</h4>
@@ -16,12 +18,12 @@ A-3340 Obertauern
         <br/>
 Tel.: +43 123 123 45
         <br/>
-Fax: +43 1565 122 56 
+Fax: +43 1565 122 56
         <br/>
 E-Mail: info@skihotel.com
         <br/>
         <br/>
-Handelsrechtliche Geschäftsführern: 
+Handelsrechtliche Geschäftsführern:
         <br/>
         <figure>
             <img src="Jenewein.png" alt="Matthias Jenewein">
@@ -47,8 +49,8 @@ Einzelhandel mit Leder-, Galanterie- und Bijouteriewaren sowie kunstgewerblichen
         <h4>Geistiges Eigentum</h4>
         <p>S&auml;mtliche auf dieser Site sichtbaren Warenzeichen, Logos und Dienstleistungsmarken, Inhalte, Layout, allf&auml;llige Ton- und Videosequenzen sind urheberrechtlich gesch&uuml;tzt. Alle Rechte daran bleiben der Rechteinhaberin oder dem Rechteinhaber vorbehalten. &Auml;nderungen d&uuml;rfen nicht vorgenommen werden und es ist untersagt, diese in irgendeiner Weise zu nutzen, herunterzuladen, zu kopieren oder zu vertreiben.</p>
         <h4>Haftungsausschluss</h4>
-        <p>S&auml;mtliche Texte auf der Website wurden sorgf&auml;ltig gepr&uuml;ft. Die hier angebotenen Inhalte dienen der allgemeinen Information. Es ist nicht ausgeschlossen, dass Daten und Angaben auf dieser Homepage nicht oder fehlerhaft angezeigt werden. F&uuml;r die Richtigkeit, Aktualit&auml;t, Vollst&auml;ndigkeit und Verf&uuml;gbarkeit der gebotenen Informationen/Daten wird keine Gew&auml;hrleistung/Haftung &uuml;bernommen. Insbesondere k&ouml;nnen keinerlei Rechtsanspr&uuml;che, die sich aus der Verwendung der abgerufenen Informationen und Daten ergeben, begr&uuml;ndet werden. Verweise und Links zu anderen Internetangeboten wurden sorgf&auml;ltig ausgew&auml;hlt. Deren Inhalt, Richtigkeit, Aktualit&auml;t, 
-        Vollst&auml;ndigkeit und Verf&uuml;gbarkeit liegt nicht im Einflussbereich des Websitebetreibers und wird hierf&uuml;r keine Gew&auml;hrleistung/Haftung &uuml;bernommen. Weiters wird keine Gew&auml;hrleistung/Haftung f&uuml;r downloadbare Formulare, insbesondere nicht f&uuml;r deren Aktualit&auml;t, Eignung f&uuml;r einen bestimmten Zweck und Virenfreiheit &uuml;bernommen. Schadensersatzanspr&uuml;che wegen direkter oder indirekter 
+        <p>S&auml;mtliche Texte auf der Website wurden sorgf&auml;ltig gepr&uuml;ft. Die hier angebotenen Inhalte dienen der allgemeinen Information. Es ist nicht ausgeschlossen, dass Daten und Angaben auf dieser Homepage nicht oder fehlerhaft angezeigt werden. F&uuml;r die Richtigkeit, Aktualit&auml;t, Vollst&auml;ndigkeit und Verf&uuml;gbarkeit der gebotenen Informationen/Daten wird keine Gew&auml;hrleistung/Haftung &uuml;bernommen. Insbesondere k&ouml;nnen keinerlei Rechtsanspr&uuml;che, die sich aus der Verwendung der abgerufenen Informationen und Daten ergeben, begr&uuml;ndet werden. Verweise und Links zu anderen Internetangeboten wurden sorgf&auml;ltig ausgew&auml;hlt. Deren Inhalt, Richtigkeit, Aktualit&auml;t,
+        Vollst&auml;ndigkeit und Verf&uuml;gbarkeit liegt nicht im Einflussbereich des Websitebetreibers und wird hierf&uuml;r keine Gew&auml;hrleistung/Haftung &uuml;bernommen. Weiters wird keine Gew&auml;hrleistung/Haftung f&uuml;r downloadbare Formulare, insbesondere nicht f&uuml;r deren Aktualit&auml;t, Eignung f&uuml;r einen bestimmten Zweck und Virenfreiheit &uuml;bernommen. Schadensersatzanspr&uuml;che wegen direkter oder indirekter
         Sch&auml;den, die aus der Benutzung der www-Dokumente entstehen, k&ouml;nnen nicht gegen den www-Verantwortlichen oder den Autor geltend gemacht werden. Sofern in dem Dokument durch Hyperlinks auf kommerzielle Websites verwiesen wird, stellt dies keine Empfehlung dar. Diese Links sollen nur eine (unvollst&auml;ndige) Auswahl von M&ouml;glichkeiten aufzeigen. Ein Anspruch von nicht ber&uuml;cksichtigten Websites auf Aufnahme in das Dokument besteht deshalb nicht. F&uuml;r Informationen, die &uuml;ber externe Querverweise (Hyperlinks) erreicht werden, wird keine Gew&auml;hr &uuml;bernommen.</p>
         <h4>Datenschutz</h4>
         <p>Wir verpflichten uns, die Privatsph&auml;re aller Personen zu sch&uuml;tzen, die unsere Site nutzen, und die pers&ouml;nlichen Daten, die uns von Kunden, Partnern und Interessenten &uuml;berlassen werden, vertraulich zu behandeln. Grunds&auml;tzlich k&ouml;nnen Sie unsere Website jederzeit besuchen und durchbl&auml;ttern, ohne pers&ouml;nliche Informationen anzugeben. Pers&ouml;nliche Daten, die Sie uns &uuml;ber Registrierung auf unserer Site mitteilen, werden weder verkauft noch Dritten &uuml;berlassen, sondern sind ausschlie&szlig;lich zur unternehmensinternen Verwendung bestimmt.</p>
